fixed overflow
body overflow set to hidden.
max width for phone mode set to 750px

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html {
 body{
     background: var(--bg-color);
     color: var(--text-color);
+    overflow: hidden;
 }
 
 .header{
@@ -505,7 +506,7 @@ footer .copyright{
     display: none;
 }
 
-@media(max-width: 450px){
+@media(max-width: 750px){
     #iPhone{
         display: flex;
     }
